small fixes with alignment

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body{
 }
 .container {
     display: flex;
-    align-items: flex-end;
+    align-items: center;
     flex-wrap: wrap;
 
 }
